--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,57 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  width: 100vw;
+  height: 100dvh;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.cube {
+  background: #eef3ef;
+  border-radius: 10px;
+  margin: 20px;
+  transition: transform 1s ease;
+  overflow: auto;
+}
+
+.cube::-webkit-scrollbar {
+  width: 0;
+}
+
+.cubeContent {
+  transition: opacity 0.7s ease;
+}
+
+.reverse {
+  transform: rotate3d(0, 1, 0, 180deg);
+}
+
+.forward {
+  transform: rotate3d(0, 1, 0, 0deg);
+}
+
+.ant-btn div {
+  color: rgb(45, 45, 45);
+}
+
+.ant-btn:focus-visible {
+  outline: unset!important;
+}
+
+a {
+  color: #4c9bff;
+}
+
+a:hover {
+  text-decoration: underline!important;
+}
