--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
-body {
+body * {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Open Sans';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -27,9 +25,9 @@ code {
 }
 
 .cube {
-  background: #eef3ef;
+  background: #f9f9f9;
+  border: 1px solid #00000024;
   border-radius: 10px;
-  margin: 20px;
   transition: transform 1s ease;
   overflow: auto;
 }
@@ -64,4 +62,85 @@ a {
 
 a:hover {
   text-decoration: underline!important;
+}
+
+.selected {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgb(189, 189, 189);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+  font-size: 16px;
+}
+
+.not-selected {
+  transition: all .3s ease-in-out;
+  cursor: pointer;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: rgb(189, 189, 189);
+}
+
+.not-selected:hover {
+  transform: scale(2);
+}
+
+.arrow {
+  width: 12px;
+  height: 12px;
+  border-top: 2px solid #ffffff;
+  border-right: 2px solid #ffffff;
+}
+
+.arrow-bottom {
+  transform: rotate(-45deg) translate(-16%, 16%);
+}
+
+.scroll-circle {
+  background: #0e0e0e;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 100;
+  transition: all .5s ease;
+}
+
+.ant-timeline-item-tail, .ant-timeline-item-head.ant-timeline-item-head-blue {
+  inset-inline-start: 86px!important;
+}
+
+.ant-timeline-item-label {
+  width: 70px!important;
+}
+
+.ant-timeline-item-content {
+  width: calc(100% - 110px) !important;
+  inset-inline-start: 80px!important;
+}
+
+.common-text {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.mb10 {
+  margin-bottom: 10px;
+}
+
+.mt10 {
+  margin: 10px 0 0;
+}
+
+.ant-list-item-meta-avatar img {
+  width: 30px;
+}
+
+.demo-loadmore-list .slick-dots {
+  opacity: 0!important;
 }
