--- a/src/index.css
+++ b/src/index.css
@@ -81,21 +81,21 @@ a:hover {
 .not-selected {
   transition: all .3s ease-in-out;
   cursor: pointer;
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   background: rgb(189, 189, 189);
 }
 
 .not-selected:hover {
-  transform: scale(2);
+  transform: scale(1.4);
 }
 
 .arrow {
   width: 12px;
   height: 12px;
-  border-top: 2px solid #ffffff;
-  border-right: 2px solid #ffffff;
+  border-top: 2px solid black;
+  border-right: 2px solid black;
 }
 
 .arrow-bottom {
