--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,11 @@ code {
 }
 
 .reverse {
-  transform: rotate3d(0, 1, 0, 180deg);
+  transform: rotateY(180deg);
 }
 
 .forward {
-  transform: rotate3d(0, 1, 0, 0deg);
+  transform: rotateY(0deg);
 }
 
 .ant-btn div {
