--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,13 @@ code {
 
 .cubeContent {
   transition: opacity 0.7s ease;
+  width: 100%;
+  overflow-x: hidden;
+  height: 100%;
+}
+
+.cubeContent::-webkit-scrollbar {
+  width: 0;
 }
 
 .reverse {
@@ -143,4 +150,30 @@ a:hover {
 
 .demo-loadmore-list .slick-dots {
   opacity: 0!important;
+}
+
+.flex200 {
+  display: flex;
+  width: 200%;
+  transition: all 1s ease;
+  height: 100%;
+}
+
+.local-background {
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  opacity: 0.3;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.container-page {
+  overflow: auto;
+  position: relative;
+}
+
+.container-page::-webkit-scrollbar {
+  width: 0;
 }
