--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,15 @@
 @charset "UTF-8";
 /*Обнуление*/
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 * {
   padding: 0;
   margin: 0;
   border: 0;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -15,19 +17,25 @@
   background: rgba(17, 75, 23, 0.49); /* Safari */
 }
 
-:focus, :active {
+:focus,
+:active {
   outline: none;
 }
 
-a:focus, a:active {
+a:focus,
+a:active {
   outline: none;
 }
 
-nav, footer, header, aside {
+nav,
+footer,
+header,
+aside {
   display: block;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   line-height: 1;
   font-size: 14px;
@@ -36,7 +44,9 @@ html, body {
   -webkit-text-size-adjust: 100%;
 }
 
-input, button, textarea {
+input,
+button,
+textarea {
   font-family: inherit;
 }
 
@@ -53,7 +63,8 @@ button::-moz-focus-inner {
   border: 0;
 }
 
-a, a:visited {
+a,
+a:visited {
   text-decoration: none;
 }
 
@@ -69,7 +80,12 @@ img {
   vertical-align: top;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-size: inherit;
   font-weight: inherit;
 }
@@ -87,8 +103,8 @@ body > div {
   display: flex;
   gap: 25px;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   border-radius: 15px;
   font-weight: 300;
   padding: 25px;
@@ -100,8 +116,8 @@ body > div {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   width: 100%;
 }
 
@@ -117,7 +133,7 @@ body > div {
 }
 
 .main_photo img {
-  width: 252px!important;
+  width: 252px !important;
   height: auto;
   border-radius: 5px;
 }
@@ -160,6 +176,7 @@ body > div {
 .performance_basic {
   font-size: 15px;
   line-height: 18px;
+  font-weight: 600;
 }
 
 .performance_basic > div {
@@ -222,23 +239,24 @@ body > div {
   padding: 0 25px 25px;
 }
 
-.screenshots{
+.screenshots {
   width: 45%;
 }
 
-.photos{
+.photos {
   width: 100%;
   margin: 20px 0 25px 0;
   display: flex;
   justify-content: space-between;
 }
 
-.photos>img{
+.photos > img {
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.4);
 }
 
-.ant-card-body, .ant-card-head {
-  padding: 20px!important;
+.ant-card-body,
+.ant-card-head {
+  padding: 20px !important;
 }
 
 @media (max-width: 650px) {
@@ -257,15 +275,16 @@ body > div {
   }
 
   .ant-card-meta-title {
-    font-size: 12px!important;
-    white-space: unset!important;
+    font-size: 12px !important;
+    white-space: unset !important;
   }
 
   .main {
     align-items: stretch;
   }
 
-  .main_info .ant-row, .main_info .ant-card {
+  .main_info .ant-row,
+  .main_info .ant-card {
     height: 100%;
   }
 }
@@ -273,35 +292,41 @@ body > div {
 @media (max-width: 500px) {
   .main_photo {
     width: 100% !important;
-    max-width: 300px!important;
+    max-width: 300px !important;
   }
 
   .main {
-    justify-content: center!important;
+    justify-content: center !important;
   }
 
   .ant-card-meta-title {
-    margin-bottom: 10px!important;
+    margin-bottom: 10px !important;
   }
 
-  .main, .edu, .performance, .knowledge, .projects {
+  .main,
+  .edu,
+  .performance,
+  .knowledge,
+  .projects {
     padding: 15px;
   }
 
-  .cubeContent .ant-card-head, .cubeContent .ant-card-body {
-    padding: 15px!important;
+  .cubeContent .ant-card-head,
+  .cubeContent .ant-card-body {
+    padding: 15px !important;
   }
 
   .ant-timeline-item-label {
-    width: 53px!important;
+    width: 53px !important;
   }
 
-  .ant-timeline-item-tail, .ant-timeline-item-head.ant-timeline-item-head-blue {
-    inset-inline-start: 60px!important;
+  .ant-timeline-item-tail,
+  .ant-timeline-item-head.ant-timeline-item-head-blue {
+    inset-inline-start: 60px !important;
   }
 
   .ant-timeline-item-content {
-    margin-inline-start: -10px!important;
+    margin-inline-start: -10px !important;
   }
 
   .ant-timeline-item-content {
@@ -310,11 +335,11 @@ body > div {
 }
 
 .ant-list-item-meta a:hover {
-  text-decoration: unset!important;
+  text-decoration: unset !important;
 }
 
 .ant-card {
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
 .ant-card:hover {
